[gd_scene load_steps=4 format=3 uid="uid://c1ls3riwjb1h"]

[ext_resource type="Texture2D" uid="uid://dibm4k6kkmyhm" path="res://Assets/Art/mirror.png" id="1_cp08u"]
[ext_resource type="Script" uid="uid://dv4so8kgxsinl" path="res://Objects/Mirror/Mirror.gd" id="2_wn87p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wn87p"]
size = Vector2(240, 128)

[node name="Mirror" type="Sprite2D"]
texture = ExtResource("1_cp08u")
script = ExtResource("2_wn87p")

[node name="Area2D" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(56, 0)
shape = SubResource("RectangleShape2D_wn87p")

[node name="ContinueText" type="Label" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
offset_left = 56.0
offset_top = -112.0
offset_right = 246.0
offset_bottom = -75.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "Press <Space> to see your costume
"

[node name="Nope" type="Label" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
offset_left = 64.0
offset_top = -72.0
offset_right = 252.0
offset_bottom = -35.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "Your quest is not yet completed.
 Find the Horns, Eyes, and Knife."

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
